Prefix/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-k3s
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: http2
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
    - "*"
  gateways:
    - ingress-gateway-k3s
  http:
    - match:
        - uri:
            prefix: "/b"
      route:
        - destination:
            host: nginx-service
            subset: v2
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: nginx-service
            subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
    - name: v1
      labels:
        version: A
    - name: v2
      labels:
        version: B
